--- a/package.json
+++ b/package.json
@@ -2,11 +2,28 @@
   "name": "redux-store",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
+  "main": "server/server.js",
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
+    "graphql": "^15.5.1",
+    "install-peerdeps": "^3.0.3",
+    "npm-install-peers": "^1.2.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
+    "stripe": "^8.160.0"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.0",
+    "redux-devtools": "^3.7.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "cd server && npm start",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "heroku-postbuild": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
